# mcp_ecommerce_load_server

./: .gitignore  README.md  criar_estrutura.txt  database.py  hello.py  main.py  product_discovery_crew.py  pyproject.toml  requirements.txt  store_selection_crew.py  utils__init__.py
app/: main.py
app/api/: api.py
app/db/: insert_affiliate_stores.py  insert_products.py  session.py
app/models/: affiliate_store.py  product.py
app/repositories/: affiliate_store_repository.py
app/schemas/: affiliate_store.py  product.py
config/: agents.yaml  tasks.yaml
crew_agents/: discover_and_score_stores.py  score_products.py
crews/: discover_and_score_stores.py  product_discovery_crew.py  score_products.py  store_selection_crew.py
db/: chroma.sqlite3
docs/: PlanoDoProjeto.md
review_interface/: export_batch.py  import_review.py
scrapers/: affiliate_store_discovery.py  products_collector.py
src/: main.py
src/app/: main.py
src/app/api/: api.py
src/config/: tasks.yaml
src/crews/: discover_and_score_stores.py  product_discovery_crew.py  score_products.py  store_selection_crew.py
src/tools/: db_tools.py  product_scraper_tool.py
test/: test_integration.py  test_integration_mock.py
test/test_results/: discovered_stores.json  products_to_insert.json  stores_to_insert.json
test/tests/: conftest.py  test_db_tools.py  test_integration.py
test_results/: discovered_stores.json  scored_products.json
tests/: conftest.py  test_db_tools.py  test_integration.py  test_integration_mock.py
tools/: db_tools.py  product_scraper_tool.py
utils/: MyLLM.py
(+16 files in other folders)
